secure and unsecure broker connection

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.7.0
+	bblanchon/ArduinoJson@^6.17.2
+debug_tool = esp-prog
